--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,8 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #B799FF;
+    background-color: #f5f7f7;
+    color: #f5f7f7;
 }
 
 .container h1{
@@ -25,7 +26,7 @@ body {
     padding: 3rem;
     width: 300px;
     height: 400px;
-    background-color: #ACBCFF;
+    background-color: #79031D;
 }
 
 .container p {
@@ -55,7 +56,8 @@ button {
     font-size: 20px;
     padding: 0.1rem;
     width: 5rem;
-    background-color: #AEE2FF;
+    background-color: #edb518;
+    border: none;
 }
 
 button:hover {
