--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f5f7f7;
+    background-color: white;
     color: #f5f7f7;
 }
 
